--- a/src/assets/sass/projects.scss
+++ b/src/assets/sass/projects.scss
@@ -40,7 +40,7 @@
       .skills {
         flex: 1;
         display: flex;
-        flex-direction:
+        flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
         .language {
